# polysafe-gitfixer

./: .envrc  .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  CONTRIBUTING.md  ECOSYSTEM.scm  EXPLAINME.adoc  FUNDING.yml  GOVERNANCE.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  Makefile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  SECURITY.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.github/: dependabot.yml
.github/workflows/: casket-pages.yml  codeql.yml  dogfood-gate.yml  guix-nix-policy.yml  hypatia-scan.yml  quality.yml  rsr-antipattern.yml  scorecard.yml  security-policy.yml  wellknown-enforcement.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.machine_readable/svc/: README.adoc
.machines_readable/6scm/: AGENTIC.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  consent-required.txt  humans.txt  provenance.json  security.txt
config/: default.ncl  schema.ncl
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
crates/: Cargo.toml
crates/capability/: Cargo.toml
crates/capability/src/: audit_log.rs  dir_capability.rs  lib.rs
crates/capability/tests/: capability_test.rs
crates/fs_ops/: Cargo.toml
crates/fs_ops/src/: lib.rs  transaction.rs
crates/git_ops/: Cargo.toml
crates/git_ops/src/: lib.rs
crates/git_ops/tests/: git_ops_test.rs
crates/polysafe_e2e/: Cargo.toml
crates/polysafe_e2e/benches/: polysafe_bench.rs
crates/polysafe_e2e/src/: lib.rs
crates/polysafe_e2e/tests/: e2e_test.rs
crates/polysafe_nifs/: Cargo.toml
crates/polysafe_nifs/src/: lib.rs
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
