[workspace]
resolver = "2"
members = [
    "capability",
    "fs_ops",
    "git_ops",
    "polysafe_nifs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/Hyperpolymath/polysafe-gitfixer"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

# Crypto for audit log
ring = "0.17"

# Git operations
git2 = "0.19"

# For NIF bindings
rustler = "0.36"
