[package]
name = "capability"
description = "Capability-based path safety and append-only audit logging for polysafe-gitfixer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ring = { workspace = true }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14"
