[package]
name = "fs_ops"
description = "Transactional filesystem operations with RAII cleanup for polysafe-gitfixer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
capability = { path = "../capability" }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"
